test/spec/store-align-odd.fail.txt
;;; ERROR: 1
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/store-align-odd.fail.wast
(;; STDERR ;;;
Error running "wast2wasm":
out/third_party/testsuite/store-align-odd.fail.wast:1:27: alignment must be power-of-two
(module (memory 0) (func (i64.store align=6 (i32.const 0) (i64.const 0))))
                          ^^^^^^^^^^^^^^^^^

;;; STDERR ;;)
